[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/Level.gd" type="Script" id=1]
[ext_resource path="res://fonts/MS Gothic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Intro" type="CanvasLayer"]
script = ExtResource( 1 )
lvl_name = "Intro"

[node name="Intro" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.45098, 0.541176, 1 )

[node name="Intro" type="Label" parent="Intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -110.0
margin_right = 200.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 2 )
text = "Enter Your Name:"
align = 1
uppercase = true

[node name="EnterName" type="LineEdit" parent="Intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -30.0
margin_right = 205.0
margin_bottom = 30.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
align = 1
expand_to_text_length = true
placeholder_text = "NAME"
placeholder_alpha = 0.215
caret_blink = true

[connection signal="text_entered" from="Intro/EnterName" to="." method="_on_EnterName_text_entered"]
