[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/MS Gothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://levels/Level.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Loading" type="CanvasLayer"]
script = ExtResource( 2 )
lvl_name = "Loading"

[node name="Loading" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Timer" type="Timer" parent="Loading"]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.45098, 0.541176, 1 )

[node name="Title" type="Label" parent="Loading"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.0
margin_top = -78.0
margin_right = -24.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 2 )
text = "LOADING..."
align = 1

[connection signal="timeout" from="Loading/Timer" to="." method="_on_Timer_timeout"]
