[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/MS Gothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://levels/Level.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="Room" type="CanvasLayer"]
script = ExtResource( 2 )
lvl_name = "Room"

[node name="Room" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Room"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.352941, 0.407843, 0.298039, 1 )

[node name="Back" type="Button" parent="Room"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -242.0
margin_top = -90.0
margin_bottom = -38.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "BACK"
flat = true

[node name="MenuVBox" type="VBoxContainer" parent="Room"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -110.0
margin_right = 121.0
margin_bottom = 110.0

[node name="Work" type="Button" parent="Room/MenuVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="Talk" type="Button" parent="Room/MenuVBox"]
margin_top = 56.0
margin_right = 242.0
margin_bottom = 108.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "TALK"
flat = true

[node name="Shop" type="Button" parent="Room/MenuVBox"]
margin_top = 112.0
margin_right = 242.0
margin_bottom = 164.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "SHOP"
flat = true

[node name="Sleep" type="Button" parent="Room/MenuVBox"]
margin_top = 168.0
margin_right = 242.0
margin_bottom = 220.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "SLEEP"
flat = true

[node name="Stats" type="MarginContainer" parent="Room"]
margin_left = 30.0
margin_top = 30.0
margin_right = 368.0
margin_bottom = 478.0

[node name="DictVBox" type="VBoxContainer" parent="Room/Stats"]
margin_right = 338.0
margin_bottom = 448.0

[node name="Name" type="Label" parent="Room/Stats/DictVBox"]
margin_right = 338.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="Money" type="Label" parent="Room/Stats/DictVBox"]
margin_top = 35.0
margin_right = 338.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="Energy" type="Label" parent="Room/Stats/DictVBox"]
margin_top = 70.0
margin_right = 338.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="ToD" type="Label" parent="Room/Stats/DictVBox"]
margin_top = 105.0
margin_right = 338.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="Days" type="Label" parent="Room/Stats/DictVBox"]
margin_top = 140.0
margin_right = 338.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="TimePlayed" type="Label" parent="Room/Stats/DictVBox"]
margin_top = 175.0
margin_right = 338.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="Save" type="Label" parent="Room/Stats/DictVBox"]
margin_top = 210.0
margin_right = 338.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 2 )
text = "Filler"
uppercase = true

[node name="Inv" type="Button" parent="Room"]
anchor_left = 0.077
anchor_top = 0.911
anchor_right = 0.077
anchor_bottom = 0.911
margin_left = -77.56
margin_top = -25.92
margin_right = 77.44
margin_bottom = 26.08
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "INV"
flat = true

[node name="Blur" type="ColorRect" parent="Room"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.301961, 0.301961, 0.580392 )

[node name="Return" type="Control" parent="Room"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0

[node name="ColorRect" type="ColorRect" parent="Room/Return"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0.282353, 0.282353, 1 )

[node name="Label" type="Label" parent="Room/Return"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
text = "Save and return to menu?"
uppercase = true

[node name="YesNo" type="HBoxContainer" parent="Room/Return"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -20.0
margin_right = 89.0
margin_bottom = 20.0

[node name="Yes" type="Button" parent="Room/Return/YesNo"]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "YES"
flat = true

[node name="Space" type="Label" parent="Room/Return/YesNo"]
margin_left = 54.0
margin_top = 9.0
margin_right = 124.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
text = "       "
uppercase = true

[node name="No" type="Button" parent="Room/Return/YesNo"]
margin_left = 128.0
margin_right = 178.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "NO"
flat = true

[node name="Inventory" type="Control" parent="Room"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="InvBG" type="ColorRect" parent="Room/Inventory"]
margin_left = 73.0
margin_top = 133.0
margin_right = 573.0
margin_bottom = 633.0
color = Color( 0.262745, 0.262745, 0.262745, 1 )

[node name="Line2D" type="Line2D" parent="Room/Inventory"]
points = PoolVector2Array( 563, 200, 83, 200 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )

[node name="Title" type="Label" parent="Room/Inventory"]
anchor_left = 5.987
anchor_top = 4.362
anchor_right = 5.987
anchor_bottom = 4.362
margin_left = -146.48
margin_top = -15.48
margin_right = 146.52
margin_bottom = 15.52
custom_fonts/font = SubResource( 2 )
text = "INVENTORY"
uppercase = true

[node name="X" type="Button" parent="Room/Inventory"]
anchor_left = 13.337
anchor_top = 4.362
anchor_right = 13.337
anchor_bottom = 4.362
margin_left = -38.48
margin_top = -18.48
margin_right = 38.52
margin_bottom = 18.52
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "X"
flat = true

[node name="InventoryVBox" type="VBoxContainer" parent="Room/Inventory"]
margin_left = 93.0
margin_top = 215.0
margin_right = 386.0
margin_bottom = 588.0

[node name="ice_cream" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="space" type="Label" parent="Room/Inventory/InventoryVBox"]
margin_top = 35.0
margin_right = 293.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 8 )

[node name="pudding" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="space2" type="Label" parent="Room/Inventory/InventoryVBox"]
margin_top = 91.0
margin_right = 293.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 8 )

[node name="cold_med" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="space3" type="Label" parent="Room/Inventory/InventoryVBox"]
margin_top = 147.0
margin_right = 293.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 8 )

[node name="cook_ingred" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="space4" type="Label" parent="Room/Inventory/InventoryVBox"]
margin_top = 203.0
margin_right = 293.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 8 )

[node name="noodles" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="space5" type="Label" parent="Room/Inventory/InventoryVBox"]
margin_top = 259.0
margin_right = 293.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 8 )

[node name="movie_tickets" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[node name="space6" type="Label" parent="Room/Inventory/InventoryVBox"]
margin_top = 315.0
margin_right = 293.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 8 )

[node name="energy_drink" type="Button" parent="Room/Inventory/InventoryVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "WORK"
flat = true

[connection signal="pressed" from="Room/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Room/MenuVBox/Work" to="." method="_on_Work_pressed"]
[connection signal="pressed" from="Room/MenuVBox/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Room/MenuVBox/Sleep" to="." method="_on_Sleep_pressed"]
[connection signal="pressed" from="Room/Inv" to="." method="_on_Inv_pressed"]
[connection signal="pressed" from="Room/Return/YesNo/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Room/Return/YesNo/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="Room/Inventory/X" to="." method="_on_X_pressed"]
