[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/MS Gothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://levels/Level.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Sleeping" type="CanvasLayer"]
script = ExtResource( 2 )
lvl_name = "Sleeping"

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.45098, 0.541176, 1 )

[node name="Days" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -25.0
margin_right = 125.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Day"
align = 1

[node name="Rent" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -320.0
margin_right = 225.0
margin_bottom = -270.0
custom_fonts/font = SubResource( 2 )
text = "Rent Paid (-$5000)"
align = 1

[connection signal="timeout" from="SleepTimer" to="." method="_on_SleepTimer_timeout"]
